# clipboard-logger

./: .gitignore  CMakeLists.txt  CmakeSettings.json  README.md  open.bat  setup.bat
src/: main.c
